--- a/HealthQuestions/Info.plist
+++ b/HealthQuestions/Info.plist
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>com.apple.security.app-sandbox</key>
-	<true/>
-	<key>com.apple.security.files.user-selected.read-only</key>
-	<true/>
+    <key>API_KEY</key>
+    <string>$(API_KEY)</string>
+    <key>API_URL</key>
+    <string>$(API_URL)</string>
 </dict>
 </plist>
